Fixed sidebar overflow, removed unnecessary css, edited text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2464,7 +2464,7 @@
 		background: #4acaa8;
 		color: #d1f1e9;
 		height: 100%;
-		overflow-y: auto;
+		overflow-y: visible;
 		position: fixed;
 		text-align: center;
 		top: 0;
